fiddling with course_summary page, scrollbar fix

--- a/client/css/course_summary.css
+++ b/client/css/course_summary.css
@@ -1,8 +1,3 @@
-body {
-	font-family: "Open Sans";
-	overflow: scroll;
-}
-
 .graph {
 	margin: 5px;
 	font-size: 13px;
@@ -10,6 +5,11 @@ body {
 	height: 250px;
 	display: block;
 	float: left;
+}
+
+.graphs {
+	overflow-y: scroll;
+	height: 90%;
 }
 
 .wrapper {
